--- a/index.html
+++ b/index.html
@@ -15,11 +15,15 @@
 		<header>
 				<div class="container">
 						<div class="row">
-								<div class="col-6">
+								<div class="col-1">
 										<img id="logo" src="assets/img/3.jpg">
-										<h1 class="name"> Le Petit Prince</h1>
 								</div>
 								<div class="col-6">
+										<h1 class="name"> Le Petit Prince</h1>
+										<a id="icon" href="#"> <i class="fa fa-bars "  aria-hidden="true"></i></a>
+								</div>
+
+								<div id="menuHeader" class="col-5">
 										<ul>
 						                        <li><a href="#">Home</a></li>
 						                        <li><a href="#">About</a></li>
@@ -32,7 +36,7 @@
 				</div>
 		</header>
 		<section>
-				<div class="photo">
+				<div class="row" id="photo">
 						<img id="home" src="assets/img/zorro.jpg">		
 				</div>
 		</section>
